# CyberShield-MCP

./: Dockerfile  README.md  agent_langchain.py  docker-compose.yml  fastapi_mcp_server.py  main.py  pyproject.toml  server.py  test_agent_streamlit.py  test_mcp.py
executors/: base_executor.py  docker_executor.py  registry.py  ssh_executor.py
heartbeat/: heartbeat_tracker.py
mcp_server/: api.py  models.py  websocket.py
prompts/: threat_response.py
resources/: firewall_state.py
task_queue/: memory_queue.py
tools/: agent_response.py  diagnostics.py  eventlog_analyzer.py  firewall.py  hardening.py  logs.py  network_watch.py  processes.py
utils/: commands.py  ssh_executor.py
